<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/horizontal_margin"
    android:layout_marginTop="@dimen/vertical_margin"
    android:layout_marginEnd="@dimen/vertical_margin"
    android:background="@drawable/border"
    android:columnCount="2"
    android:paddingStart="@dimen/horizontal_padding"
    android:paddingTop="@dimen/vertical_padding"
    android:paddingEnd="@dimen/horizontal_padding"
    android:paddingBottom="@dimen/vertical_padding"
    android:rowCount="6"
    android:id="@+id/grid_address_list">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/address"
        android:textColor="@color/gray_600"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/address"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:paddingStart="@dimen/start_padding"
        android:text=""
        android:textSize="24sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/pin_code"
        android:textColor="@color/gray_600"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pin_code"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:text=""
        android:paddingStart="@dimen/start_padding"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/city"
        android:textColor="@color/gray_600"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/city"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text=""
        android:paddingStart="@dimen/start_padding"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/state"
        android:textColor="@color/gray_600"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/state"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:text=""
        android:paddingStart="@dimen/start_padding"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/country"
        android:textColor="@color/gray_600"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/country"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:text=""
        android:paddingStart="@dimen/start_padding"
        android:textSize="24sp" />

    <Button
        android:id="@+id/view_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:text="@string/get_direction"
        android:drawableEnd="@drawable/get_direction"
        android:textAllCaps="false"
        android:textSize="24sp"/>
</GridLayout>