<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/horizontal_padding"
    android:paddingTop="@dimen/vertical_padding"
    android:paddingEnd="@dimen/horizontal_padding">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="12dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/pinEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addressEditText"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="12dp"
                android:ems="10"
                android:hint="@string/pin_code"
                android:inputType="number"
                android:text=""
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/cityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pinEditText"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="12dp"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/stateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cityEditText"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="12dp"
                android:ems="10"
                android:hint="@string/state"
                android:inputType="text"
                android:text=""
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/countryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stateEditText"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="12dp"
                android:ems="10"
                android:hint="@string/country"
                android:inputType="text"
                android:text=""
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/countryEditText"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="13dp"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:drawableEnd="@drawable/plus_sign"
                android:paddingEnd="@dimen/horizontal_padding"
                android:paddingStart="@dimen/horizontal_padding"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="14dp"
                android:text="@string/add_your_address_as_parking_place_area"
                android:textAlignment="center"
                android:textColor="@color/gray_600"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>